--- a/IXLA_SDK/packages.config
+++ b/IXLA_SDK/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0-preview1" targetFramework="net48" />
+  <package id="Polly" version="8.5.0" targetFramework="net48" />
+  <package id="Polly.Core" version="8.5.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
@@ -13,4 +18,6 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
