--- a/IXLA_SDK/packages.config
+++ b/IXLA_SDK/packages.config
@@ -3,15 +3,28 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0-preview1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net48" />
+  <package id="NLog" version="5.3.4" targetFramework="net48" />
+  <package id="NLog.Extensions.Logging" version="5.3.15" targetFramework="net48" />
   <package id="Polly" version="8.5.0" targetFramework="net48" />
   <package id="Polly.Core" version="8.5.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
