--- a/IXLA_SDK/IXLA_SDK.csproj
+++ b/IXLA_SDK/IXLA_SDK.csproj
@@ -188,14 +188,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="IXLAWebServiceNew.asmx" />
-    <Content Include="Web.config" />
     <Content Include="IXLAWebService.asmx" />
+    <Content Include="Web.config" />
+    <Content Include="IXLAWebServiceOld.asmx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InterlockNotificationEventArgs.cs" />
-    <Compile Include="IXLAWebServiceNew.asmx.cs">
-      <DependentUpon>IXLAWebServiceNew.asmx</DependentUpon>
+    <Compile Include="IXLAWebService.asmx.cs">
+      <DependentUpon>IXLAWebService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="MachineApi.cs" />
@@ -203,8 +203,8 @@
     <Compile Include="MachineCommand.cs" />
     <Compile Include="MachineResponseBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IXLAWebService.asmx.cs">
-      <DependentUpon>IXLAWebService.asmx</DependentUpon>
+    <Compile Include="IXLAWebServiceOld.asmx.cs">
+      <DependentUpon>IXLAWebServiceOld.asmx</DependentUpon>
     </Compile>
     <Compile Include="Protocol\Commands\Encoder\Connect2RfIdCommand.cs" />
     <Compile Include="Protocol\Commands\Encoder\Connect2RfIdResponse.cs" />
