--- a/IXLA_SDK/packages.config
+++ b/IXLA_SDK/packages.config
@@ -21,6 +21,7 @@
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.0" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net48" />
